--- a/css/main.css
+++ b/css/main.css
@@ -850,30 +850,77 @@ footer .copyright {
   }
 }
 
+@media only screen and (min-width: 1024px) {
+
+  /* added for landscape view on tablets and iPad Pro */
+
+  .content-wrapper {
+    max-width: 900px;
+  }
+}
+
 @media only screen and (min-width: 1200px) {
 
   /******** Desktop styles here ********/
 
   .content-wrapper {
-    max-width: 960px;
+    max-width: 1450px;
  }
 
-/* =======================================================================
-    Main page
-  ====================================================================== */
+  /** Font styles **/
+
+  h1 {
+    font-size: 4.5rem;
+  }
+
+  h2 {
+    font-size: 3rem;
+  }
+
+  h3 {
+    font-size: 2.5rem;
+  }
+
+  h4 {
+    font-size: 1.25rem;
+  }
+
+  h5 {
+    font-size: 1.5rem;
+  }
 
   /** Header **/
 
 header .content-wrapper {
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+  width: 90%;
 }
+
+header {
+  padding: 80px 0 140px 0;
+}
+
+header h3 {
+  font-size: 2.75rem;
+}
+
+header nav {
+  justify-content: space-around;
+}
+
+nav ul li a {
+  font-size: 1.25rem;
+  padding: 10px 10px;
+}
+
 
   /** Hero -area **/
 
 .hero-area h1 {
-  font-size: 4.5em;
-  line-height: 1.333;
-  margin: 150px;
+  font-size: 4.5rem;
+  margin: 200px 100px 100px 100px;
 }
 
   /** Portfolio-area **/
@@ -897,9 +944,8 @@ header .content-wrapper {
   align-items: center;
 }
 
-.portfolio-area .recipe article {
-  display: flex;
-  flex-flow: row wrap;
+.portfolio-piece {
+  width: 30%;
 }
 
   /** About **/
