Changed project links and hover colours. Created skill-list class, removed skill background colour

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
    ========================================================================== */
 
 html {
-  color: #222;
+  color: #fff;
   font-size: 1em;
   line-height: 1.4;
 }
@@ -288,10 +288,11 @@ h4 {
 .social p {
   margin: 0 0 40px 0;
 }
+
 /* ------------------------- Base Header Styles -------------------- */
 
 header {
-  padding: 30px 0 60px 0;
+  padding: 30px 0 140px 0;
   }
 
 header h3 {
@@ -341,7 +342,7 @@ ul li a:hover {
 
 /* ==================== Mobile styles - Homepage ==================== */
 
-/* ---- Hero Area ----*/
+/* ------ Hero Area ------*/
 
 .hero-area .content-wrapper {
   width: 100%;
@@ -368,7 +369,7 @@ ul li a:hover {
   color: #c79d2f;
 }
 
-/* ---- Portfolio Area ---- */
+/* ------ Portfolio Area ------ */
 
 #projects,
 #skills {
@@ -397,6 +398,7 @@ ul li a:hover {
 
 #projects h2 {
   color: #c79d2f;
+  font-weight: bold;
   text-align: center;
   margin-bottom: 30px;
   line-height: 1;
@@ -412,19 +414,46 @@ ul li a:hover {
 .project-link {
   padding: .75rem 3.75rem;
   border-radius: 30px;
-  color: #c79d2f ;
-  background-color: #41562b;
+  color: #dddddd ;
+  background-color: #c79d2f;
   cursor: pointer;
 }
 
 .project-link:hover {
-  background-color: #749a4d;
   color: #262829;
+  background-color: #fff;
 }
 
 /* ---- Skills Area ----*/
 
-#skills {
+#skills .content-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.skill-list {
+  margin: 3rem 0;
+  display: flex;
+  flex-flow: row wrap;
+  flex: 1;
+  font-variant: small-caps;
+}
+
+.skill-list li {
+  color: #fff;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  flex-basis: 50%;
+}
+
+#skills ul li {
+  padding: 1rem;
+}
+
+/* #skills {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -450,7 +479,7 @@ ul li a:hover {
   color: #c79d2f;
   padding: 10px 0;
   Margin: 20px 0;
-}
+} */
 
 .skill {
   width: 100%;
@@ -477,6 +506,7 @@ ul li a:hover {
 
 .about-area h2 {
   color: #c79d2f;
+  font-weight: bold;
 }
 
 .about-area h4 {
