--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  font-weight: 400;
+  font-weight: bold;
 }
 
 h3 {
@@ -222,7 +222,7 @@ figure {
 #projects,
 #skills,
 #about {
-  padding: 140px 0 100px 0;
+  padding: 120px 0 60px 0;
 }
 
 figure {
@@ -308,7 +308,7 @@ header .content-wrapper {
   background: #dddddd;
   width: 100%;
   height: 1px;
-  margin: 10px 0 10px 0;
+  margin: 40px 0 40px 0;
 }
 
 header nav {
@@ -394,7 +394,6 @@ ul li a:hover {
 
 #projects h2 {
   color: #c79d2f;
-  font-weight: bold;
   text-align: center;
   margin-bottom: 30px;
   line-height: 1;
@@ -439,12 +438,18 @@ ul li a:hover {
   font-weight: bold;
 }
 
+#skills p {
+  line-height: 1.7;
+}
+
 .skill-list {
   margin: 3rem 0;
   display: flex;
   flex-flow: row wrap;
   flex: 1;
   font-variant: small-caps;
+  align-content: center;
+  justify-content: space-around;
 }
 
 .skill-list li {
@@ -453,6 +458,11 @@ ul li a:hover {
   flex-direction: column;
   align-items: center;
   flex-basis: 50%;
+}
+
+.skill-list li i {
+  color: #fff;
+  font-size: 2.5rem;
 }
 
 #skills ul li {
@@ -512,12 +522,15 @@ ul li a:hover {
 
 .about-area h2 {
   color: #c79d2f;
-  font-weight: bold;
 }
 
 .about-area h4 {
   color: #262829;
   text-align: left;
+}
+
+.about-area p {
+  color: #262829;
 }
 
 /* ------------------------ Base Footer Styles ------------------------- */
