--- a/css/main.css
+++ b/css/main.css
@@ -501,6 +501,15 @@ ul li a:hover {
   height: 35px;
   width: 35px;
 }
+
+.coffee-icon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180.03 219.5'%3E%3Cdefs%3E%3Cstyle%3E.cls-1,.cls-3%7Bfill:%23fff;%7D.cls-1,.cls-2%7Bstroke:%23fff;stroke-miterlimit:10;%7D%3C/style%3E%3C/defs%3E%3Cg id='Layer_2' data-name='Layer 2'%3E%3Cg id='Layer_1-2' data-name='Layer 1'%3E%3Cellipse class='cls-1' cx='105.23' cy='175.15' rx='74.85' ry='28.89' transform='translate(-21.9 15.19) rotate(-7.48)'/%3E%3Cellipse class='cls-2' cx='104.88' cy='175.32' rx='62.9' ry='24.28' transform='matrix(0.99, -0.13, 0.13, 0.99, -21.93, 15.14)'/%3E%3Cpath id='cup_base' data-name='cup base' class='cls-3' d='M76,131h75.5c0,48.55-34.08,88.5-75.5,88.5S.5,179.55.5,131V131Z'/%3E%3Cellipse class='cls-2' cx='76' cy='130.5' rx='75.5' ry='11'/%3E%3Cpath class='cls-3' d='M143.77,30.1C137.54,32.35,133.45,38.55,133,45c-.27,3.54,1.1,6.83,1.81,10.23a28.18,28.18,0,0,1,.21,9.78c-1,6.37-3.89,12.94-9,17-2.68,2.11-5.87,3.46-8.53,5.61a18.81,18.81,0,0,0-5.24,6.81c-2.72,6-3.27,13.39.29,19.14,2,3.27,7.23.26,5.18-3-2.27-3.67-2.11-8.75-.43-12.77a13.4,13.4,0,0,1,4.44-5.91c2.62-2,5.64-3.32,8.23-5.36,5.1-4,8.48-10.17,10.15-16.39a36.47,36.47,0,0,0,1.25-10.08,42,42,0,0,0-1.69-10.19c-.82-3.08-.89-5.82.41-8.55,1.18-2.46,3.19-4.67,5.37-5.45a3.09,3.09,0,0,0,2.1-3.69,3,3,0,0,0-3.69-2.1Z'/%3E%3Cpath class='cls-3' d='M6.64,38.21A15.53,15.53,0,0,0,8.45,55.78c2.26,2.63,5.4,3.84,8.44,5.32a26.16,26.16,0,0,1,7.61,5.54c4.41,4.64,7.14,11.08,6.54,17.54-.32,3.43-1.93,6.57-2.78,9.86a18,18,0,0,0,.12,9.92c2.05,6.54,7.76,12.14,14.67,13.15a3.1,3.1,0,0,0,3.69-2.1c.39-1.41-.48-3.45-2.09-3.69a13,13,0,0,1-10.49-9,12.44,12.44,0,0,1,.12-7.58c1-3.41,2.34-6.6,2.72-10.17a27.79,27.79,0,0,0-5.51-18.9,33.42,33.42,0,0,0-7-7c-2.62-2-5.54-3.08-8.41-4.57a9.3,9.3,0,0,1-4.24-12.87c1.92-3.36-3.26-6.38-5.18-3Z'/%3E%3Cpath class='cls-3' d='M79.57,108.19a3.25,3.25,0,0,1-1.43-1,5.34,5.34,0,0,1-.39-.44c.08.11.24.37-.06-.12a5.33,5.33,0,0,1-.31-.51s-.42-.83-.23-.39a8.56,8.56,0,0,1-.61-4.72,13.53,13.53,0,0,1,2.3-5.19,37.32,37.32,0,0,1,4.59-5.15c3.42-3.4,7-6.86,8.92-11.36a15.55,15.55,0,0,0-1-14.52A25.82,25.82,0,0,0,81,55.63c-4.67-2.38-9.8-3.85-14.18-6.79a25.52,25.52,0,0,1-10.93-21.1A25.56,25.56,0,0,1,70.38,5.55a3,3,0,0,0,1.08-4.11A3.07,3.07,0,0,0,67.35.37a31.49,31.49,0,0,0-16.91,22,31.43,31.43,0,0,0,8,27.22c3.6,3.86,8.09,6.3,12.9,8.33,4.55,1.93,9.25,3.75,12.76,7.34,3,3.09,4.49,6.84,3,11-1.59,4.48-5.59,7.75-8.83,11-3.95,4-7.65,8.73-7.84,14.6-.16,5.21,2.46,10.25,7.5,12.08a3,3,0,0,0,3.69-2.1,3.07,3.07,0,0,0-2.1-3.69Z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 35px;
+  width: 35px;
+}
+
 /* #skills {
   display: flex;
   justify-content: center;
