--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,7 @@ span {
   font-weight: bold;
 }
 
-img {
+ img {
   margin: 20px 0 0 0;
   filter: drop-shadow(1px 2px 6px #c79d2f);
   width: 100%;
@@ -241,6 +241,11 @@ h4 {
 .hero-area {
   margin: 0;
 }
+
+/* .project-image {
+  height: 100px;
+  width: 130px;
+} */
 
 .project-title {
   margin: 1.5rem 0rem;
@@ -464,10 +469,10 @@ ul li a:hover {
 .skill-list {
   display: flex;
   flex-flow: row wrap;
-  flex: 1;
   font-variant: small-caps;
   align-content: center;
   justify-content: space-around;
+  margin: 3rem 2rem;
 }
 
 .skill-list li {
