--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,6 @@ textarea {
 
 /*--- General styles ---*/
 
-
 i {
     color: #c79d2f;
   }
@@ -117,15 +116,12 @@ a {
 
 h1, h2, h3, h4, h5 {
   color: #fff;
+  line-height: 1.5;
+  width: 100%;
 }
 
 h1, h2, h3 {
   font-family: 'Signika Negative', sans-serif;
-}
-
-h1, h2, h3, h4, h5 {
-  line-height: 1.5;
-  width: 100%;
 }
 
 h1 {
@@ -158,7 +154,7 @@ span {
   font-weight: bold;
 }
 
- img {
+img {
   margin: 20px 0 0 0;
   filter: drop-shadow(1px 2px 6px #c79d2f);
   width: 100%;
@@ -198,7 +194,7 @@ footer {
   width: 100%;
 }
 
-/* Zero all margins */
+/******** Zero all margins ********/
 
 h1, h2, h3, h4, h5 {
   margin:0;
@@ -208,13 +204,8 @@ p {
   margin: 0;
 }
 
-/** Now set margin and paddings to required values for any element **/
+/******** Now set margin and paddings to required values for any element ********/
 
-/* #projects,
-#skills,
-#about {
-  padding: 120px 0 60px 0;
-} */
 .portfolio,
 .skills,
 .about-area,
@@ -242,24 +233,13 @@ h4 {
   margin: 0;
 }
 
-/* .project-image {
-  height: 100px;
-  width: 130px;
-} */
-
 .project-title {
   margin: 1.5rem 0rem;
 }
 
 .project-info {
   margin: 2rem 0rem;
-  width: 100%;
-  flex-basis: 50%;
   padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .project-description {
@@ -294,6 +274,10 @@ h4 {
   margin: 0 0 40px 0;
 }
 
+.copyright {
+  margin-top: 50px;
+}
+
 /* ------------------------- Base Header Styles -------------------- */
 
 header {
@@ -304,13 +288,6 @@ header h3 {
   margin-top: 0;
   margin-bottom: 0;
 }
-
-/* ---- Try this out with the clarint icon at a future date ---- */
-/* header img {
-  filter: none;
-  margin: 0;
-  width: 50%;
-} */
 
 header .content-wrapper {
   display: flex;
@@ -378,7 +355,7 @@ ul li a:hover {
 
 /* ==================== Mobile styles - Homepage ==================== */
 
-/* ------ Hero Area ------*/
+/* ---------------- Hero Area ----------------*/
 
 .hero-area .content-wrapper {
   width: 100%;
@@ -405,7 +382,7 @@ ul li a:hover {
   color: #c79d2f;
 }
 
-/* ------ Portfolio Area ------ */
+/* ---------------- Portfolio Area ---------------- */
 
 #projects,
 #skills {
@@ -442,6 +419,15 @@ ul li a:hover {
   width: 100%;
 }
 
+.project-info {
+  width: 100%;
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .project-link {
   padding: .75rem 3.75rem;
   border-radius: 30px;
@@ -455,7 +441,7 @@ ul li a:hover {
   background-color: #fff;
 }
 
-/* ---- Skills Area ----*/
+/* ---------------- Skills Area ----------------*/
 
 #skills .content-wrapper {
   display: flex;
@@ -487,6 +473,10 @@ ul li a:hover {
   margin: 3rem 2rem;
 }
 
+#skills ul li {
+  padding: 1rem;
+}
+
 .skill-list li {
   color: #fff;
   display: inline-flex;
@@ -500,17 +490,12 @@ ul li a:hover {
   font-size: 2.5rem;
 }
 
-#skills ul li {
-  padding: 1rem;
-}
-
 .design-icon {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 584.5 432.5'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:%23fff;%7D%3C/style%3E%3C/defs%3E%3Cg id='Layer_2' data-name='Layer 2'%3E%3Cg id='Mobile_Icon' data-name='Mobile Icon'%3E%3Cpath class='cls-1' d='M569.5,166.5H529V10A10,10,0,0,0,519,0H10A10,10,0,0,0,0,10V23.5H509.69v143H470.5a15,15,0,0,0-15,15V309H0v44a10,10,0,0,0,10,10l210.5,1.5L208,413H188v13H341V413H321l-10.5-50h145v54.5a15,15,0,0,0,15,15h99a15,15,0,0,0,15-15v-236A15,15,0,0,0,569.5,166.5Zm7.59,243.89a15,15,0,0,1-15,15h-84a15,15,0,0,1-15-15v-221a15,15,0,0,1,15-15h2.28a7.61,7.61,0,0,0-.27,2.94v3.11c0,2.73,2.94,4.95,6.56,4.95h69.87c3.62,0,6.56-2.22,6.56-4.95v-3.11a5.83,5.83,0,0,0-.54-2.92,15,15,0,0,1,14.54,15Z'/%3E%3Crect class='cls-1' y='23.5' width='19.31' height='285.5'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   background-size: contain;
   background-repeat: no-repeat;
   height: 35px;
   width: 45px;
-    /* Other styles here */
 }
 
 .code-icon {
@@ -553,23 +538,7 @@ ul li a:hover {
   width: 55px;
 }
 
-.skill {
-  width: 100%;
-}
-
-.tool {
-  width: 100%;
-}
-
-/* ---- About Me ---- */
-
-/* .about-area {
-  display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
-  background: url('../img/about-me.png') center no-repeat;
-  background-size: cover;
-} */
+/* ---------------- About Me ----------------*/
 
 .about-area .content-wrapper {
   display: flex;
@@ -626,7 +595,8 @@ footer .contact-wrapper {
   align-items: flex-start;
 }
 
-.contact-info, .social {
+.contact-info, 
+.social {
   margin: 0 0 60px 0;
 }
 
@@ -774,15 +744,19 @@ footer .copyright {
 
 @media only screen and (min-width: 768px) {
 
-  /******** Tablet styles here ********/
+  /* ================================ 
+          Tablet styles here 
+     ===============================*/
 
-  /*** General Styles ***/
+
+  /* ------ General Styles ------*/
 
   .content-wrapper {
     max-width: 640px;
   }
 
-  /*** Font Styles ***/
+
+  /*------ Font Styles ------*/
 
   h1 {
     font-size: 2rem;
@@ -807,7 +781,8 @@ footer .copyright {
 
   /** List elements already have 20px of bottom margin **/
 
-  /** Header **/
+
+  /*---------------- Header ---------------*/
 
   header {
     justify-content: space-around;
@@ -823,6 +798,11 @@ footer .copyright {
     display: none;
   }
 
+  header h3 {
+    font-size: 1.75rem;
+    width: 50%;
+  }
+
   header nav {
     display: flex;
     justify-content: flex-end;
@@ -833,18 +813,14 @@ footer .copyright {
     font-size: 1.125rem;
   }
 
-  header h3 {
-    font-size: 1.75rem;
-    width: 50%;
-  }
-
   header nav ul {
     display: flex;
     justify-content: space-between;
     width: 80%;
   }
 
-    /** Hero Area **/
+
+    /*---------------- Hero Area ----------------*/
 
   .hero-area {
     min-height: 600px;
@@ -856,7 +832,8 @@ footer .copyright {
     margin-top: 100px;
   }
 
-  /** Portfolio Area **/
+
+  /*---------------- Portfolio Area ----------------*/
 
   .portfolio-area figure {
     margin: 0;
@@ -883,17 +860,8 @@ footer .copyright {
     flex-basis: 20%;
   }
 
-  /** About **/
 
-  /* Change code for this section when the photo is ready */
-
-  /* .about-area {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url('../img/about-me.png') center no-repeat;
-    background-size: cover;
-  } */
+  /*---------------- About Me ----------------*/
 
   .about-area .content-wrapper {
     justify-content: center;
@@ -924,7 +892,8 @@ footer .copyright {
     color: #262829;
   }
 
-  /** Footer **/
+
+  /*---------------- Footer ----------------*/
 
   footer {
     padding: 140px 0;
@@ -968,7 +937,8 @@ footer .copyright {
 
 @media only screen and (min-width: 1024px) {
 
-  /* added for landscape view on tablets and iPad Pro */
+
+/* ========== added for landscape view on tablets and iPad Pro ==========*/
 
   .content-wrapper {
     max-width: 900px;
@@ -997,13 +967,17 @@ footer .copyright {
 
 @media only screen and (min-width: 1200px) {
 
-  /* =============== Desktop styles here =============== */
+
+  /* ========================= 
+        Desktop styles here 
+     ========================= */
 
   .content-wrapper {
     max-width: 1450px;
  }
 
-  /** Font styles **/
+
+  /*--------------- Font styles ----------------*/
 
   h1 {
     font-size: 4.5rem;
@@ -1029,7 +1003,8 @@ footer .copyright {
     font-size: 1.25rem;
   }
 
-  /** Header **/
+
+  /*---------------- Header ----------------*/
 
 header .content-wrapper {
   display: flex;
@@ -1056,14 +1031,15 @@ nav ul li a {
 }
 
 
-  /** Hero -area **/
+  /*---------------- Hero-area ---------------*/
 
 .hero-area h1 {
   font-size: 4.5rem;
   margin: 200px 100px 100px 100px;
 }
 
-  /** Portfolio-area **/
+
+  /*--------------- Portfolio-area ---------------*/
 
 .portfolio-area .header-divider {
   margin: 10px 0 10px 0;
@@ -1088,14 +1064,16 @@ nav ul li a {
   width: 30%;
 }
 
-  /** About **/
+
+  /*---------------- About ---------------*/
 
 #about p {
   font-size: 1.25rem;
   width: 80%;
 }
 
-  /** Footer **/
+
+  /*---------------- Footer ----------------*/
 
 footer .content-wrapper {
   max-width: 70%;
