Darkened the background colour of the about section. Changed the p text to a light grey. Highlighted my name and a phrase with the accent colour.

--- a/css/main.css
+++ b/css/main.css
@@ -255,6 +255,7 @@ h4 {
 }
 
 .about-area h4 {
+  font-family: 'signika negative' sans-serif;
   margin-top: 30px;
 }
 
@@ -547,7 +548,7 @@ ul li a:hover {
   padding-top: 40px;
   padding-bottom: 100px;
   width: 100%;
-  background-color: #676767;
+  background-color: #565656;
   align-items: center;
 }
 
@@ -577,15 +578,19 @@ ul li a:hover {
 }
 
 .about-area h4 {
-  color: #262829;
+  color: #fff;
   text-align: center;
 }
 
 .about-area p {
-  color: #fff;
+  color: #dedede;
   text-align: left;
+  margin-bottom: 1em;
 }
 
+.about-area span {
+  color: #c79d2f;
+}
 /* ------------------------ Base Footer Styles ------------------------- */
 
 footer .contact-wrapper {
@@ -889,7 +894,7 @@ footer .copyright {
 
   .about-area p {
     font-size: 1rem;
-    color: #262829;
+    color: #dedede;
   }
 
 
