Changed about-intro text-align to 'left'. Changed project subheadings to h3 with .project-title class.

--- a/css/main.css
+++ b/css/main.css
@@ -904,7 +904,7 @@ footer .contact-wrapper {
   .about-intro {
     color: #fff;
     margin: 25px 0 25px 0;
-    text-align: center;
+    text-align: left;
   }
 
   .about-text {
