--- a/css/main.css
+++ b/css/main.css
@@ -416,7 +416,7 @@ ul li a:hover {
 .project-title {
   color: #fff;
   line-height: 1.5;
-  font-size: 1.25rem;
+  font-size: 1.35rem;
   font-weight: bold;
   width: 100%;
   margin: 0 0 40px 0;
@@ -626,7 +626,7 @@ footer .contact-wrapper {
   margin-bottom: 60px;
 }
 
-.footer h5 {
+.contact-title h4 {
   font-size: 1.5rem;
   font-weight: 400;
   width: 100%;
@@ -858,11 +858,8 @@ footer .contact-wrapper {
     align-items: center;
   }
 
-  /* .portfolio-area h4 {
-    margin: 30px 0 10px 0;
-  } */
-
-  .project-title p {
+  .project-title {
+    font-size: 1.5rem;
     margin: 30px 0 10px 0;
   }
 
@@ -929,7 +926,7 @@ footer .contact-wrapper {
     width: 33%;
   }
 
-  footer h3 {
+  .footer h3 {
     margin-bottom: 60px;
   }
 
@@ -962,6 +959,10 @@ footer .contact-wrapper {
 
   .content-wrapper {
     max-width: 900px;
+  }
+
+  .project-title {
+    font-size: 1.75rem;
   }
 
   .about-area .content-wrapper {
@@ -1069,7 +1070,6 @@ footer .contact-wrapper {
     width: 30%;
   }
 
-
   /*---------------- About ---------------*/
 
   .about-text {
@@ -1088,7 +1088,7 @@ footer .contact-wrapper {
     padding: 140px 0 140px 0;
   }
 
-  footer address a {
+  .footer address a {
     font-size: 1.25rem;
   }
 
