--- a/css/main.css
+++ b/css/main.css
@@ -573,7 +573,7 @@ ul li a:hover {
   font-family: 'signika negative'sans-serif;
   font-size: 1.25rem;
   font-weight: bold;
-  text-align: center;
+  text-align: left;
   margin: 30px 0 40px 0;
 }
 
@@ -968,7 +968,7 @@ footer .contact-wrapper {
   .about-area .content-wrapper {
     flex-flow: row wrap;
     justify-content: space-between;
-    max-width: inherit;
+    align-items: flex-start;
   }
 
   .about-photo {
@@ -977,7 +977,7 @@ footer .contact-wrapper {
   }
 
   .about-photo img {
-    padding-top: 60px;
+    padding-top: 30px;
   }
 
   .about-info {
