--- a/css/main.css
+++ b/css/main.css
@@ -626,9 +626,10 @@ footer .contact-wrapper {
   margin-bottom: 60px;
 }
 
-.contact-title h4 {
-  font-size: 1.5rem;
-  font-weight: 400;
+.contact-title {
+  font-size: 1.125rem;
+  font-weight: 200;
+  font-style: italic;
   width: 100%;
 }
 
