Removed link to services page until update complete. Added padding to services h1

--- a/css/main.css
+++ b/css/main.css
@@ -455,7 +455,7 @@ ul li a:hover {
   font-family: 'Signika Negative', Helvetica, Arial, sans-serif;
   font-weight: 600;
   line-height: 1.5;
-  /* margin: 70px 0 70px 45px; */
+  padding-bottom: 140px;
   width: 100%;
 }
 
