--- a/css/main.css
+++ b/css/main.css
@@ -353,9 +353,25 @@ ul li a:hover {
 
 /* ----------------- Landing Page ---------------*/
 
+.landing-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #161717;
+  width: 100%;
+  height: 100px;
+}
+
+.landing-page header{
+  padding: 0;
+}
+
 .landing-page .content-wrapper {
-  width: 90%;
+  display: flex;
+  width: 60%;
   min-height: 700px;
+  justify-content: center;
+  align-items: center;
 }
 
 .landing-page {
@@ -372,36 +388,21 @@ ul li a:hover {
   width: 65%;
 }
 
+.landing-page a:hover {
+  color: #c79d2f;
+}
+
 .landing-page span {
   color: #c79d2f;
 }
 
 .choose-language {
   display: flex;
-  justify-content: space-between;
-  flex-flow: row;
-  width: 70%;
-}
-
-.uk-flag img {
-  margin: 0;
-  filter: none;
-  display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  width: 30%;
-  height: 30%;
+  width: 50%;
 }
 
-.brazil-flag img {
-  margin: 0;
-  filter: none;
-  display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
-  width: 30%;
-  height: 30%;
-}
 
 /* ---------------- Hero Area ----------------*/
 
