--- a/css/main.css
+++ b/css/main.css
@@ -351,59 +351,6 @@ ul li a:hover {
 
 /* ==================== Mobile styles - Homepage ==================== */
 
-/* ----------------- Landing Page ---------------*/
-
-.landing-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #161717;
-  width: 100%;
-  height: 100px;
-}
-
-.landing-page header{
-  padding: 0;
-}
-
-.landing-page .content-wrapper {
-  display: flex;
-  width: 60%;
-  min-height: 700px;
-  justify-content: center;
-  align-items: center;
-}
-
-.landing-page {
-  background: url('../img/full-backgroundbw.png') center no-repeat;
-  background-size: cover;
-}
-
-.landing-page h1 {
-  font-size: 3.25em;
-  font-family: 'Signika Negative', Helvetica, Arial, sans-serif;
-  font-weight: 600;
-  line-height: 1.5;
-  margin: 70px 0 70px 45px;
-  width: 65%;
-}
-
-.landing-page a:hover {
-  color: #c79d2f;
-}
-
-.landing-page span {
-  color: #c79d2f;
-}
-
-.choose-language {
-  display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
-  width: 50%;
-}
-
-
 /* ---------------- Hero Area ----------------*/
 
 .hero-area .content-wrapper {
@@ -499,8 +446,15 @@ ul li a:hover {
 
 /* ---------------- Services Area --------------*/
 
+.service-page {
+  text-align: center;
+}
+
+.service-page span {
+  color: #c79d2f;
+}
 .services .content-wrapper {
-  width: 100%;
+  width: 85%;
 }
 
 .services h1 {
@@ -512,23 +466,26 @@ ul li a:hover {
   width: 100%;
 }
 
-.services span {
-  color: #c79d2f;
-}
-
-.services-info {
+.services {
   display: flex;
   justify-content: space-between;
   flex-flow: column;
   padding-top: 40px;
   padding-bottom: 100px;
+  margin-top: 120px;
   width: 100%;
   background-color: #4f4f4f;
   align-items: center;
 }
 
+.services-info {
+  margin: 40px;  
+}
 
-
+.services-info i {
+  color: #fff;
+  font-size: 2.5rem;
+}
 /* ---------------- Skills Area ----------------*/
 
 #skills .content-wrapper {
