--- a/css/main.css
+++ b/css/main.css
@@ -444,79 +444,6 @@ ul li a:hover {
   background-color: #fff;
 }
 
-/* ---------------- Services Area --------------*/
-
-.service-page {
-  text-align: center;
-}
-
-.service-page span {
-  color: #c79d2f;
-}
-.services .content-wrapper {
-  width: 85%;
-}
-
-.services h1 {
-  font-size: 3.25em;
-  font-family: 'Signika Negative', Helvetica, Arial, sans-serif;
-  font-weight: 600;
-  line-height: 1.5;
-  padding-bottom: 140px;
-  width: 100%;
-}
-
-.services {
-  display: flex;
-  justify-content: space-between;
-  flex-flow: column;
-  padding-top: 40px;
-  padding-bottom: 100px;
-  margin-top: 120px;
-  width: 100%;
-  background-color: #4f4f4f;
-  align-items: center;
-}
-.services-info {
-  flex-flow: row wrap;
-  align-content: center;
-  justify-content: space-around;
-  margin: 3rem 2rem;
-}
-
-.services-info h3 {
-  margin: 100px 0 30px 0;
-}
-
-.services-info li {
-  color: #fff;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-  flex-basis: 50%;
-  margin: 30px 0 30px 0;
-}
-
-.services-list li i {
-  margin: 30px 0 30px 0;
-}
-
-.services-info {
-  margin: 40px;  
-}
-
-.services-info p {
-  margin: 15px 0;
-}
-.services-info i {
-  color: #fff;
-  font-size: 3rem;
-}
-
-.services-info hr {
-  width: 30%;
-  margin:auto;
-}
 /* ---------------- Skills Area ----------------*/
 
 #skills .content-wrapper {
@@ -671,6 +598,83 @@ ul li a:hover {
   color: #c79d2f;
 }
 
+/* ============== Services and FAQ Page =============*/
+
+.faq h4 {
+  margin: 80px 0 30px 0;
+}
+
+.service-page {
+  text-align: center;
+}
+
+.service-page span {
+  color: #c79d2f;
+}
+.services .content-wrapper {
+  width: 85%;
+}
+
+.services h1 {
+  font-size: 3.25em;
+  font-family: 'Signika Negative', Helvetica, Arial, sans-serif;
+  font-weight: 600;
+  line-height: 1.5;
+  padding-bottom: 140px;
+  width: 100%;
+}
+
+.services {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: column;
+  padding-top: 40px;
+  padding-bottom: 100px;
+  margin-top: 120px;
+  width: 100%;
+  background-color: #4f4f4f;
+  align-items: center;
+}
+.services-info {
+  flex-flow: row wrap;
+  align-content: center;
+  justify-content: space-around;
+  margin: 3rem 2rem;
+}
+
+.services-info h3 {
+  margin: 100px 0 30px 0;
+}
+
+.services-info li {
+  color: #fff;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  flex-basis: 50%;
+  margin: 30px 0 30px 0;
+}
+
+.services-list li i {
+  margin: 30px 0 30px 0;
+}
+
+.services-info {
+  margin: 40px;  
+}
+
+.services-info p {
+  margin: 15px 0;
+}
+.services-info i {
+  color: #fff;
+  font-size: 3rem;
+}
+
+.services-info hr {
+  width: 30%;
+  margin:auto;
+}
 /* ------------------------ Base Footer Styles ------------------------- */
 
 footer .contact-wrapper {
