--- a/css/main.css
+++ b/css/main.css
@@ -204,7 +204,7 @@ p {
   margin: 0;
 }
 
-/******** Now set margin and paddings to required values for any element ********/
+/******** Set margin and paddings to required values for any element ********/
 
 .portfolio,
 .skills,
@@ -292,15 +292,15 @@ header .content-wrapper {
   flex-flow: row wrap;
   margin: 0;
 }
-
+/* 
 .header-divider {
   background: #dddddd;
   width: 100%;
   height: 1px;
   margin: 40px 0 40px 0;
-}
+} */
 
-#navbar {
+.navigation {
   overflow: hidden;
   background-color: #161717;
 }
@@ -315,6 +315,10 @@ header .content-wrapper {
   z-index: 1;
 }
 
+.navigation .icon {
+  display: none;
+}
+
 .navbarOffsetMargin {
   padding-top: 45px;
 }
@@ -322,6 +326,27 @@ header .content-wrapper {
 nav a.active {
   color: #c79d2f;
   background: #161717;
+}
+
+.navigation a:not(:first-child) {display: none;}
+
+.navigation a.icon {
+  float: right;
+  display: block;
+}
+
+.navigation.responsive {position: relative;}
+
+.navigation.responsive a.icon {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.navigation.responsive a {
+  float: none;
+  display: block;
+  text-align: left;
 }
 
 header nav {
@@ -883,10 +908,6 @@ footer .contact-wrapper {
   header .content-wrapper {
     justify-content: space-between;
     width: 100%;
-  }
-
-  header .header-divider {
-    display: none;
   }
 
   header h3 {
