Changed header nav etc to classes

--- a/css/main.css
+++ b/css/main.css
@@ -315,10 +315,6 @@ header .content-wrapper {
   z-index: 1;
 }
 
-.navigation .icon {
-  display: none;
-}
-
 .navbarOffsetMargin {
   padding-top: 45px;
 }
@@ -328,7 +324,7 @@ nav a.active {
   background: #161717;
 }
 
-header nav {
+.navbar {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -338,17 +334,17 @@ header nav {
   width: 100%;
 }
 
-header nav ul {
+.nav-menu {
   display: flex;
   justify-content: space-around;
   width: 100%;
 }
 
-header nav ul li {
+.nav-item {
   font-size: 1.125rem;
 }
 
-ul li a:hover {
+.nav-item a:hover {
   color: #c79d2f;
 }
 
